--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,23 @@
 @import "reset.css";
 @import "main.css";
+@import "header.css";
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
+
+body {
+    background-color: white;
+    padding: 40px 60px;
+    color: #020202;
+    font-family: "Roboto Condensed", -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+* {
+    box-sizing: border-box;
+}
