--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-a {
+a, p {
     color: inherit;
     text-decoration: none;
 }
