--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,96 @@
+/*.slide-1, .slide-2, .slide-3, .slide-4{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}*/
+
+.slide-wrap img{
+   filter: brightness(40%);
+}
+
+.main .slide-wrap{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+    color: rgb(255, 255, 255);
+}
+
+.slide__title{
+    position: absolute;
+    font-size: 50px;
+    font-weight: bold;
+    top: 224px;
+}
+
+.slide__explain{
+    position: absolute;
+    display: flex;
+    top: 330px;
+    font-size: 20px;
+}
+
+.main__arrow{
+    color: rgb(0, 0, 190);
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.main__read-more{
+    position: absolute;
+    top: 400px;
+    background-color: rgb(0, 0, 190);
+    padding: 7px 20px;
+    text-transform: uppercase;
+    font-size: 11px;
+    border-radius: 15px;
+}
+
+.main__read-more:hover, .main__read-more:focus {
+    cursor: pointer;
+    background-color: #f7f7f7;
+    color: rgb(0, 0, 190);
+
+}
+
+.btn{
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 40px;
+}
+
+.btn button{
+    background-color: rgb(255, 255, 255);
+    border: 1px solid white;
+    padding: 5px 5px;
+    margin: 4px;
+    border-radius: 50%;
+    outline: 0;
+}
+
+.btn button:hover{
+    border: 0.5px white solid;
+    background-color: rgb(0, 0, 190);
+    cursor: pointer;
+}
+
+.btn button:focus {
+    border: 0.5px white solid;
+    background-color: rgb(0, 0, 190);
+    cursor: pointer;
+}
+
+.btn-1:focus .slide-1{
+    display: none;
+}
+
 .main__wallpaper {
-    width: 100px;
+    width: 100%;
+    margin-top: 78px;
 }
 
 .slide-2, .slide-3, .slide-4 {
