--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,14 @@
 
 body {
     background-color: white;
-    padding: 40px 60px;
+    padding: 0px;
     color: #020202;
     font-family: "Roboto Condensed", -apple-system,
     BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-a, p {
+a, p{
     color: inherit;
     text-decoration: none;
 }
