--- a/css/header.css
+++ b/css/header.css
@@ -23,19 +23,10 @@
     justify-content: space-between;
 }
 
-@keyframes oppositeAnimation {
-    from{
-        background-color: #efeff5;
-    }
-    to{
-        background-color: rgb(0, 0, 190);
-    }
-}
-
 .header__search i:hover {
-    animation: oppositeAnimation 0.5s ease-in-out;
     background-color: rgb(0, 0, 190);
     color: rgb(255, 255, 255);
+    transition: ease-in-out 0.5s;
 }
 
 .header__search i{
