--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@
 .slide__title{
     position: absolute;
     font-size: 50px;
-    font-weight: bold;
+    font-weight: 600;
     top: 224px;
 }
 
@@ -31,18 +31,13 @@
     display: flex;
     top: 330px;
     font-size: 20px;
-}
-
-.main__arrow{
-    color: rgb(0, 0, 190);
-
-    display: flex;
-    justify-content: space-between;
+    font-weight: 400;
+    line-height: 27px;
 }
 
 .main__read-more{
     position: absolute;
-    top: 400px;
+    top: 420px;
     background-color: rgb(0, 0, 190);
     padding: 7px 20px;
     text-transform: uppercase;
@@ -54,7 +49,7 @@
     cursor: pointer;
     background-color: #f7f7f7;
     color: rgb(0, 0, 190);
-
+    transition: 0.5s ease-in-out;
 }
 
 .btn{
@@ -66,7 +61,7 @@
 .btn button{
     background-color: rgb(255, 255, 255);
     border: 1px solid white;
-    padding: 5px 5px;
+    padding: 4px 4px;
     margin: 4px;
     border-radius: 50%;
     outline: 0;
@@ -84,10 +79,6 @@
     cursor: pointer;
 }
 
-.btn-1:focus .slide-1{
-    display: none;
-}
-
 .main__wallpaper {
     width: 100%;
     margin-top: 78px;
@@ -96,3 +87,12 @@
 .slide-2, .slide-3, .slide-4 {
     display: none;
 }
+
+
+/*
+.main__arrow{
+    cursor: pointer;
+    color: rgb(0, 0, 190);
+    display: flex;
+    justify-content: space-between;
+}*/
