--- a/css/nav.css
+++ b/css/nav.css
@@ -16,7 +16,6 @@
 .list {
     background-color: #e7e7ec;
     margin: 10px;
-    border: 1px solid rgb(255, 255, 255);
     padding: 20px;
     width: 250px;
     align-items: center;
@@ -75,4 +74,7 @@
 .list:hover {
     background-color: #2e2e38;
     color: #ffffff;
+    box-shadow: 0 13px 27px -5px rgba(50,50,93,0.25),0 8px 16px -8px rgba(0,0,0,0.3);
+    transition: linear 0.3s;
 }
+
