--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;600;700&display=swap');
 @import "nav.css";
+@import "section.css";
 
 body {
     background-color: white;
