--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;600;700&display=swap');
 @import "nav.css";
 @import "section.css";
+@import "mobile.css";
 
 body {
     background-color: white;
